Fixed bugs and added animated buttons

--- a/src/app/famous-people/famous-people.component.html
+++ b/src/app/famous-people/famous-people.component.html
@@ -1,5 +1,4 @@
-<h1>Here's Some Famous Devs!</h1>
+<h1>Check Out These Famous Devs!</h1>
 <ng-container *ngFor="let d of devs?.complete">
-    <app-famous-person-details [dev]="d"></app-famous-person-details>
-    <hr>
+    <app-famous-person-details [dev]="d"></app-famous-person-details><br><br>    
 </ng-container>
