--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,11 +1,21 @@
 button {
-    background-color: #edf0f1;
-    border-color: #004E7C;
-    border-radius: 5px;
-    border-style: solid;
-    color: #004E7C;
-    padding-top: 2px;
-    padding-bottom: 2px;
-    padding-left: 10px;
-    padding-right: 10px;
+    padding: 15px 25px;
+    font-size: 24px;
+    text-align: center;
+    cursor: pointer;
+    outline: none;
+    color: #fff;
+    font-weight: bold;
+    background-color: #e714c3;
+    border: none;
+    border-radius: 15px;
+    box-shadow: 0 9px #999;    
+}
+
+button:hover {background-color: #e7ad14}
+
+button:active {
+  background-color: #e7ad14;
+  box-shadow: 0 5px #666;
+  transform: translateY(4px);
 }
