--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <div class="align">
-    <button routerLink="/Donuts">Donuts</button>&nbsp;
-    <button routerLink="/Devs">Devs</button>&nbsp;
-    <hr class="nav">
+    <br>
+    <button routerLink="/Donuts">Donuts</button>&nbsp; &nbsp;
+    <button routerLink="/Devs">Devs</button>&nbsp;<br><br>    
     <router-outlet></router-outlet>
 </div>
