--- a/src/app/donut-details/donut-details.component.html
+++ b/src/app/donut-details/donut-details.component.html
@@ -1,4 +1,4 @@
-<h1>Details for {{donutDetails?.name}} Donuts</h1>
+<h1>{{donutDetails?.name}} Donuts</h1>
 <ng-container *ngIf="donutDetails?.photo != undefined">
     <img src="{{donutDetails.photo}}" />
 </ng-container>
